test/parse/expr/bad-if-sig-multi.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    i32.const 1
    if (result i32 i32)
      i32.const 1
      i32.const 2
    else
      i32.const 3
      i32.const 4
    end
    drop
    drop)

  (func
    i32.const 1
    i32.const 2
    if (param i32)
      drop
    else
      drop
    end))
(;; STDERR ;;;
out/test/parse/expr/bad-if-sig-multi.txt:6:5: error: multiple result values not currently supported.
    if (result i32 i32)
    ^^
out/test/parse/expr/bad-if-sig-multi.txt:19:5: error: if params not currently supported.
    if (param i32)
    ^^
;;; STDERR ;;)
